# games-and-songs-in-local-network

./: .gitignore  README.md
Client/src/: Router.tsx  index.scss  index.tsx
Client/src/pages/error_page/: NotFound404.tsx
Client/src/pages/landing_page/: LandingPage.tsx
client/: package-lock.json  package.json  tsconfig.json
client/src/: Router.tsx  index.scss
client/src/assets/scss/: essentials.scss
client/src/pages/error_page/: NotFound404.tsx
client/src/types/: user.tsx
client1/public/: index.html
server/: app.py  configuration.py  requirements.txt  server.py  setup.cfg
server/db_models/: db.py  user_model.py
server/enumerations/: roles.py
server/exceptions/: forename.py  registration.py  surename.py  username.py
server/instance/: main.sqlite
server/routes/: routes.py
server/routes/main/: login.py  main.py  register.py
server/routes/main/utils/: main.py
server/routes/user_information/: user_information.py
server/src/api/main/: login.py  register.py
server/src/api/spotify/: spotify.py
server/src/controller/: base_api.py
server/src/controller/main/: login.py  register.py
server/src/controller/main/utils/: main.py
server/src/controller/spotify/: spotify.py
server/src/controller/user_information/: user_information.py
server/src/db/: user_model.py
server/src/enum/: allowed_symbols.py  roles.py  spotify_scopes.py  status_codes.py
server/src/exceptions/: forname.py  not_a_object.py  not_found.py  password.py  surname.py
server/src/model/db_model/: db.py  user_model.py
server/src/routes/: routes.py
(+6 files in other folders)
