[metadata]
name = games and music in local network
version = 0.1.0
author = Alexander Kipka
author_email = example@gmail.com

[options]
zip_safe = False
packages = find:
install_requires =
    flask
    flask-sqlalchemy
    flask-bcrypt
    flask-session
    flask-restful
    flask-jwt-extended
    python-dotenv
    spotipy